# vibe-player

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/: dropbox_client.h  dropbox_state.h  metadata.h  metadata_cache.h  path_handler.h  player.h  playlist.h  temp_file_manager.h
common/src/: dropbox_client.cpp  dropbox_state.cpp  metadata.cpp  metadata_cache.cpp  miniaudio_impl.cpp  path_handler.cpp  player.cpp  playlist.cpp  temp_file_manager.cpp
list/: CMakeLists.txt
list/src/: ai_backend.h  ai_backend_chatgpt.cpp  ai_backend_chatgpt.h  ai_backend_claude.cpp  ai_backend_claude.h  ai_backend_keyword.cpp  ai_backend_keyword.h  ai_backend_llamacpp.cpp  ai_backend_llamacpp.h  ai_prompt_builder.cpp  ai_prompt_builder.h  library_search.cpp  library_search.h  main.cpp
player/: CMakeLists.txt
player/src/: main.cpp
src/: ai_backend.h  ai_backend_claude.cpp  ai_backend_claude.h  ai_backend_llamacpp.cpp  ai_backend_llamacpp.h  ai_playlist.cpp  ai_playlist.h  ai_prompt_builder.cpp  main.cpp  main_player.cpp  main_playlist_gen.cpp  metadata.cpp  metadata.h  metadata_cache.cpp  metadata_cache.h  player.cpp  player.h
tui_player/: CMakeLists.txt
tui_player/src/: main.cpp
